# auto-isa

./: .gitignore  .gitmodules  Cargo.toml
docs/: branch-lift.gv  ieee.typ  ir-idiom.gv  odometer-ex.gv  percentage.py  plot-idiom-instances.py  plot-instruction-cdf.py  plot-op-count-cdf.py  plot-param-cdf.py  plot-total-mem.py  plugin-architecture.gv  refs.bib  simple-idiom.gv  top-5.gv
docs/paper/: ieee.typ  main.typ  refs.bib
src/: analysis.rs  extraction.rs  instrumentation.rs  lib.rs  shared.rs  utils.rs
testdata/: .gitignore  chomp.gv  dt.gv  evalloop.gv  exptree.gv  himenobmtxpa.gv  loop_sum.c  loop_sum.gv  loop_sum.out  loop_sum_branch.c  loop_sum_select.c  loop_sum_simple.c  lowercase.c  lowercase.gv  matmul_f64_4x4.gv  oourafft.gv  perlin.c  perlin.gv  pointer_chase.c  pointer_chase.gv  queens.gv  reed_solomon.gv  richards_benchmark.c  richards_benchmark.gv  salsa20.c  salsa20.gv  stepanov_v1p2.gv
testdata/chomp/: chomp-idioms.ll  chomp.gv
testdata/dt/: dt-idioms.ll  dt.gv
testdata/evalloop/: evalloop-idioms.ll  evalloop.gv
testdata/exptree/: exptree-idioms.ll  exptree.gv
testdata/gapbs/: .gitignore  bc-idioms.ll  bfs-idioms.ll  cc-idioms.ll  cc_sv-idioms.ll  converter-idioms.ll  pr-idioms.ll  pr_spmv-idioms.ll  sssp-idioms.ll  tc-idioms.ll
testdata/graphs/: graphs-idioms.ll  graphs.gv  main.cpp
testdata/himenobmtxpa/: himenobmtxpa-idioms.ll  himenobmtxpa.gv
testdata/loop_sum/: loop_sum.gv
testdata/loop_sum_branch/: loop_sum_branch-idioms.ll  loop_sum_branch.gv
testdata/loop_sum_select/: loop_sum_select-idioms.ll  loop_sum_select.gv
testdata/loop_sum_simple/: loop_sum_simple-idioms.ll  loop_sum_simple.gv
testdata/lowercase/: lowercase-idioms.ll  lowercase.gv
testdata/matmul_f64_4x4/: matmul_f64_4x4-idioms.ll  matmul_f64_4x4.gv
testdata/oourafft/: oourafft-idioms.ll  oourafft.gv
testdata/perlin/: perlin-idioms.ll  perlin.gv
testdata/pointer_chase/: pointer_chase-idioms.ll  pointer_chase.gv
testdata/queens/: queens-idioms.ll  queens.gv
testdata/reed_solomon/: reed_solomon.gv  (+1 more)
tests/: output.rs
(+6 files in other folders)
