[package]
name = "auto-isa"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
either = "1.9.0"
llvm-plugin = { version = "0.4.1", features = ["llvm16-0"], path = "/home/asaveau/Desktop/wip/llvm-plugin-rs/llvm-plugin" }
rustix = { version = "0.38.30", features = ["runtime", "process", "stdio"] }

[dev-dependencies]
expect-test = "1.4.1"
paste = "1.0.14"
supercilex-tests = { version = "0.4.4", default-features = false }

[lib]
crate-type = ["cdylib"]
