[package]
name = "auto-isa"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
either = "1.9.0"
llvm-plugin = { version = "0.4.1", features = ["llvm17-0"], path = "/home/asaveau/Desktop/wip/llvm-plugin-rs/llvm-plugin" }
rustc-hash = "1.1.0"
rustix = { version = "0.38.30", features = ["runtime", "process", "stdio"] }
tracy-client = { version = "0.17.0", optional = true }

[dev-dependencies]
expect-test = "1.4.1"
paste = "1.0.14"
supercilex-tests = { version = "0.4.4", default-features = false }

[features]
trace = ["dep:tracy-client"]

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dr]
inherits = "release"
debug = true
debug-assertions = true
strip = false
