[package]
name = "auto-isa"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
either = "1.13.0"
itoa = "1.0.11"
llvm-plugin = { version = "0.5.0", features = ["llvm17-0"] }
rustc-hash = "1.1.0"
rustix = { version = "0.38.34", features = ["runtime", "process", "stdio"] }
tracy-client = { version = "0.17.1", optional = true }

[dev-dependencies]
expect-test = "1.5.0"
paste = "1.0.15"
supercilex-tests = { version = "0.4.7", default-features = false }

[features]
trace = ["dep:tracy-client"]

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dr]
inherits = "release"
debug = true
debug-assertions = true
strip = false
